<resources>
    <string name="app_name">Adoptuj Krysia</string>
    <string name="app_header">Sławomir Kryś - twój osobisty przyjaciel</string>
    <string name="app_weather_header">Niezbędnik wędkarza - pogoda w Plaskoszu</string>
    <string name="widget_default_text">Proszę poczekać, trwa ładowanie wypowiedzi.</string>
    <string name="hint_widget_image">Wizerunek Sławomira Krysia w garniturze.</string>
    <string name="hint_open_drawer">Otwórz menu</string>
    <string name="hint_close_drawer">Zamknij menu</string>
    <string name="error_internet_connection">Niestety, nie mogę się połączyć z serwerem pogody. Sprawdź twoje połączenie sieciowe.</string>
    <string name="error_weather_api">Niestety, serwer pogody odrzucił moje połączenie.</string>
    <string name="weather_check_button">Sprawdź pogodę w Plaskoszu</string>
    <string name="weather_wind_speed">Prędkość wiatru: %s m/s</string>
    <string name="weather_temperature">Temperatura: %s °C</string>
    <string name="weather_feels_like">Temperatura odczuwalna: %s °C</string>
    <string name="weather_description">Rodzaj pogody: %s</string>
    <string name="weather_unrecognized">(???)</string>
    <string name="fishing_opportunity_good">Ooo, wygląda na to, że mamy świetną pogodę na ryby :)</string>
    <string name="fishing_opportunity_bad">Wygląda na to, że pogoda na ryby jest raczej średnia :(</string>
    <string name="fishing_opportunity_unknown">Ciekawe, czy mamy dziś dobrą pogodę na ryby :)</string>
    <string name="apk_friend_touched">Prosimy nie dotykać eksponatu.</string>
    <string name="apk_friend_touched_weather">Nie wkurwiaj wędkarza.</string>
    <string name="apk_welcome_message">
        Dziękuję za zainstalowanie aplikacji Adoptuj Krysia. Dzięki tej aplikacji, otrzymujesz dostęp
        do unikalnego, niepowtarzalnego widgetu na pulpit. Przetestuj widżet i zostań właścicielem
        twojego osobistego Sławka Krysia już teraz.
    </string>
    <string name="apk_welcome_message2">
        Aby wywołać Sławka, przejdź na pulpit twojego telefonu i dodaj nowy widżet.
        Sławomir Kryś aktualizuje swoje wiadomości raz na pół godziny. Aktualizację możesz
        przyśpieszyć klikając na twarz Sławka, ale nie rób tego zbyt często, bo twój przyjaciel się obrazi.
    </string>
    <string name="apk_welcome_friend">
        Dzień dobry, dziękuję\nże mnie zainstalowałeś :)
    </string>
    <string name="apk_weather_welcome">
        Witaj w Niezbędniku Wędkarza™. Dzięki niemu, dowiesz się jaka jest obecnie pogoda w Plaskoszu,
        czyli ojczyźnie Sławka Krysia. Kliknij przycisk poniżej i sprawdź pogodę w Plaskoszu już teraz.
    </string>
    <string name="apk_weather_welcome_friend">
        Mam nadzieję, że\ndobra dziś pogoda:)
    </string>
    <string name="nav_home">Strona główna</string>
    <string name="nav_weather">Niezbędnik wędkarza™</string>
    <string name="log_main_activity_launched">Okno aplikacji Android zostało uruchomione</string>
    <string name="log_widget_refreshed_user">Użytkownik poprosił o ręczne odświeżenie widżetu</string>
    <string name="log_widget_refreshed_user_accept">Prośba o odświeżenie widżetu została przyjęta</string>
    <string name="log_widget_refreshed_user_decline">Prośba o odświeżenie widżetu została odrzucona</string>
    <string name="log_widget_refreshed">Widżet został odświeżony</string>
    <string name="log_device_boot_completed">System Android został uruchomiony ponownie</string>
    <string name="log_fragment_main">Otwieram stronę główną aplikacji.</string>
    <string name="log_fragment_weather">Otwieram niezbędnik wędkarza.</string>
    <string name="widget_friend_upset">
        Spłoszyłeś Sławka i się na ciebie obraził. Nie powinieneś go dotykać tak często.
    </string>
    <string-array name="messages_morning">
        <item>Wiesz co mówi zdenerwowany ogrodnik do kolegi? Przesadziłeś.\nTaki żarcik na dobry początek dnia :)</item>
        <item>Zapraszam na moją stronę internetową, slawek.borytucholskie.pl.</item>
        <item>Dzień dobry, informatyku, jak się dzisiaj spało?</item>
        <item>Jest tak wcześnie, a ty już nie masz energii?</item>
        <item>Jako że godzina jest jeszcze dość wczesna, życzę ci miłego dnia i smacznej wody Javy.</item>
        <item>Wiesz ile informatyków ze świeckiej potrzeba, by zmienić żarówkę? Zero, bo informatycy ze świeckiej nie są w stanie niczego zmienić :)</item>
        <item>Wiesz jakie jest pozdrowienie nazistów-informatyków? Zip-file!\nTaki żarcik na dobry początek dnia :)</item>
        <item>I po co mnie budzisz, skoro jeszcze tak młoda godzina?</item>
        <item>Dzięki mojej pracy, przestałem mieć myśli samobójcze. Teraz to realne plany zastosowania.</item>
        <item>Wiesz jak się nazywa zamknięcie szklanej butelki piwa? Kapslock.\nTaki żarcik na dobry początek dnia :)</item>
        <item>Pamiętaj, żeby zjeść pełnowartościowe śniadanie. Śniadanie jest ważnym posiłkiem w dniu dobrego informatyka.</item>
        <item>Może trudno w to uwierzyć, ale ja naprawdę kocham swoją pracę.</item>
        <item>Wiedziałeś, że jestem zawodowym programistą języka PHP? Tworzę różne ciekawe strony dla moich klientów.</item>
        <item>Co twoim zdaniem muszę w sobie zmienić, żeby uczniowie bardziej mnie szanowali?</item>
        <item>Czy wiedziałeś, że mieszkam pod adresem Plaskosz 4, Tuchola?</item>
        <item>Kocham zwierzęta, szczególnie szczupaki i sowy.</item>
        <item>Żart jest taki, że Kornaś ma w intelekcie braki :)</item>
        <item>Zabierzesz mnie kiedyś na ryby?</item>
        <item>Miłego dnia i smacznej kawusi życzy twój ulubiony profesor :)</item>
        <item>Skończmy te gry i zabawy i zajmijmy się czymś pożytecznym.</item>
        <item>Jak myślisz, dlaczego uczniowie mnie przedrzeźniają? Ja ich nie przedrzeźniam.</item>
    </string-array>
    <string-array name="messages_noon">
        <item>Jerzy Kornaś to wspaniały człowiek i jeszcze lepszy dyrektor.\nTaki żarcik na udane popołudnie :)</item>
        <item>Ciekawe, kto przejmie ster rządów w pracowni numer 5, gdy już odejdę. Co sądzisz?</item>
        <item>Chciałbyś zostać moim przyjacielem?</item>
        <item>Chciałem ci opowiedzieć śmieszny dowcip o tęczy, ale boję się, że go spalę.</item>
        <item>Wiesz dlaczego choinka nie jest głodna?\nBo jodła XD.\nTaki żarcik na udane popołudnie :)</item>
        <item>Nie uważasz, że mamy dziś idealną pogodę na ryby?</item>
        <item>Wiesz co mówi informatyk do żony na zakończenie kłótni?\n\&lt;a href=\&quot;do kuchni\&quot;&gt;</item>
        <item>Mam dzisiaj wyjątkowo cudowny dzień, mam nadzieję że twój będzie równie dobry.</item>
        <item>Czy wiedziałeś że urządzenia podłączone do prądu działają lepiej?</item>
        <item>Czy wiedziełeś że Internet Explorer kiedyś spowodował u mnie próbę samobójczą?</item>
        <item>Czy wiedziałeś że moja żona jest nauczycielką ochrony środowiska i prowadzi zajęcia dotyczące badania czystości wód?</item>
        <item>Czy wiedziałeś, że mam licencję pilota i kiedyś należałem do aeroklubu?</item>
        <item>Ciekawe, jaki rodzaj keyloggera zainstalowali w mojej pracowni tym razem.</item>
        <item>Nasza szkoła oferuje pracę dla doświadczonych hackerów. CV oraz list motywacyjny proszę umieszczać na stronie zslit-tuchola.pl</item>
        <item>To przykre, że uczniowie instalują w mojej pracowni różne wirusy. Bardzo chciałbym, żeby tego nie robili.</item>
        <item>Tęsknię za moją żoną. Myślisz, że mogłaby mnie odwiedzić w twoim telefonie?</item>
        <item>Kiedyś uczniowie zainstalowali w mojej pracowni Watykańczyka. Było mi bardzo przykro, że tak postąpili.</item>
        <item>Miesiąc temu złowiłem ogromnego karasia. Jeśli chcesz, mogę ci go pokazać.</item>
        <item>Kiedy jadę samochodem do szkoły, często nawiedzają mnie czarne myśli.</item>
        <item>Informatycy to bardzo inteligentne osoby i nie lubię, gdy inni się z nich śmieją.</item>
    </string-array>
    <string-array name="messages_evening">
        <item>Miło, że postanowiłeś do mnie zajrzeć. Zaparzyć ci herbaty?</item>
        <item>Ty też uważasz, że jestem jebanym Debianem? Inni uczniowie tak o mnie mówią.</item>
        <item>Ale mamy dziś piękny wieczór, nie sądzisz?</item>
        <item>Kiedy wyłączasz telefon, myślę tylko o tobie :)</item>
        <item>Wiesz jak się nazywają dwa takie same drzewa? Klony.\nTaki żarcik, żeby umilić ci wieczór :)</item>
        <item>Ja już nie chcę być w aplikacji na telefon. Proszę, wypuśćcie mnie stąd.</item>
        <item>Czy wiedziałeś, że jestem prezesem lokalnego koła PZW?</item>
        <item>Nie lubię, gdy uczniowie się ze mnie śmieją. Ty też się ze mnie śmiejesz?</item>
        <item>Kiedyś miałem brata Mirosława, ale pewnego dnia powiedział, że informatyków jebać prądem.</item>
        <item>Wiesz dlaczego informatycy mylą Haloween z Bożym Narodzeniem? Bo 25dec = 31oct.</item>
        <item>Kiedyś podsłuchałem na korytarzu, że uczniowie przedrzeźniają mój ton głosu. Było mi bardzo przykro.</item>
        <item>Ah, ale dzisiaj był wspaniały dzień. Mam nadzieję, że jutro też będzie równie dobry.</item>
        <item>Pamiętaj, żeby położyć się dziś szybko spać. Sen jest najważniejszą czynnością w pracy informatyka.</item>
        <item>Czy uważasz, że wyglądam ładnie? Bo ja tak.</item>
        <item>Wiesz jaki język jest najczęściej wykorzystywany przez uczniów? Wulgarny.\nTaki żarcik, żeby umilić ci wieczór :)</item>
        <item>Poczekaj chwilę, muszę odebrać kontener wody Javy, który zamówiłem.</item>
        <item>Chciałem ci powiedzieć coś bardzo śmiesznego, ale nie zmieściło mi się do okienka, więc nie powiem.</item>
        <item>\"One są wyposażone w panel krosowniczy, przełącznik sieciowy switch, serwer, specjalną konsolę KVM…\"</item>
        <item>ZSLiT to praca moich marzeń, zawsze chciałem nauczać młodzież.</item>
        <item>Kiedyś przeczytałem w internecie opinię, że karasie jedzą gówno. Byłem przez to strasznie smutny.</item>
    </string-array>
    <string-array name="messages_night">
        <item>Ostatnio podsłuchałem wypowiedź pewnego ucznia, że wyglądam jak Tony Stark. Bardzo mi to poprawiło humor.</item>
        <item>Marzę o tym, by kiedyś pójść z tobą powędkować. Myślisz, że to możliwe?</item>
        <item>W nocy często nawiedzają mnie okropne myśli, ale przy tobie czuję się bezpiecznie.</item>
        <item>Mam nadzieję, że nie zainstalowałeś mnie tylko po to, żeby się ze mnie śmiać.</item>
        <item>Wiesz czemu wulkan dostał piątkę? Bo jest aktywny.\nTaki żarcik na zakończenie dnia :)</item>
        <item>Wiesz jak się nazywa przesolona firanka? Zasłona.\nTaki żarcik na zakończenie dnia :)</item>
        <item>Wiesz jak się nazywają armaty, które nigdy się nie psują? Działa.\nTaki żarcik na zakończenie dnia :)</item>
        <item>Jest 10 typów ludzi. Ci, którzy znają system binarny i ci którzy go nie znają.</item>
        <item>Lubię deszcz, bo to jedyna okazja, gdy moje włosy są względnie czyste.</item>
        <item>Dobranoc. Idę spać - i tobie radzę to samo.</item>
        <item>Zawsze chciałem mieć takiego przyjaciela jak ty.</item>
        <item>Daj mi spać, późne zasypianie źle wpływa na moją cerę.</item>
        <item>Chodźmy już spać, jutro też jest dzień.</item>
        <item>Wiesz co najbardziej lubię w nocy? Nic.</item>
        <item>Czemu uczniowie nazywają mnie Debianem? To niemiłe.</item>
        <item>01000100 01100101 01100010 01101001 01100001 01101110</item>
        <item>Jestem tak dobry w spaniu, że mogę to robić z zamkniętymi oczami.</item>
        <item>O tej godzinie nie powinieneś korzystać z telefonu, tylko iść spać.</item>
        <item>Czy wiedziałeś, że kiedyś wystąpiłem w WeekendFM? Szkoda, że stało się to obiektem drwin moich uczniów.</item>
    </string-array>
    <string-array name="messages_halloween">
    </string-array>
</resources>