<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">

    <ProgressBar
        android:id="@+id/weather_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:backgroundTint="@android:color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimary"
        android:max="100"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/appWeatherHeader_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="10dp"
        android:text="@string/app_weather_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomeWeatherMessage_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/apk_weather_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appWeatherHeader_textView" />

    <LinearLayout
        app:layout_constraintBottom_toTopOf="@+id/weatherPhoto_imageView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeWeatherMessage_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weatherWindSpeed_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_wind_speed"
            tools:layout_editor_absoluteX="21dp" />

        <TextView
            android:id="@+id/weatherTemperature_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_temperature"
            tools:layout_editor_absoluteX="21dp" />

        <TextView
            android:id="@+id/weatherFeelsLike_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_feels_like"
            tools:layout_editor_absoluteX="21dp" />

        <TextView
            android:id="@+id/weatherDescription_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_description"
            tools:layout_editor_absoluteX="21dp" />

        <TextView
            android:id="@+id/weatherFishing_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fishing_opportunity_unknown"
            tools:layout_editor_absoluteX="21dp" />

        <Button
            android:id="@+id/checkWeather_button"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weather_check_button"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/weatherPhoto_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/friend_evening_2"
        android:contentDescription="@string/hint_widget_image"/>

    <TextView
        android:id="@+id/welcomeFriendWeatherMessage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/apk_weather_welcome_friend"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weatherPhoto_imageView"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
